--- a/Finals/Finals.html
+++ b/Finals/Finals.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>About GFRIEND</title>
 	<link rel="stylesheet" type="text/css" href="finals.css">
 	<script src="jquery-3.7.1.js"></script>
 </head>
@@ -121,9 +121,11 @@
 		<div class="information">
 			<br><br>
 			<h1>GFRIEND(여자친구)</h1>
-			<p> is a South Korean Girl Group formed by Source Music in 2015, the group consisted of six members: <b>Sowon</b>(leader & main rapper), <b>Yerin</b>(lead dancer & sub vocal), <b>Eunha</b>(lead vocal), <b>Yuju</b>(main vocal & lead dancer), <b>SinB</b>(main dancer) and <b>Umji</b>(sub vocal & lead rapper).</p>
+			<p> is a South Korean Girl Group formed by Source Music in 2015, the group consisted of six members: <b>Sowon(소원)</b>(leader & main rapper), <b>Yerin(예린)</b>(lead dancer & sub vocal), <b>Eunha(은하)</b>(lead vocal), <b>Yuju(유주)</b>(main vocal & lead dancer), <b>SinB(신비)</b>(main dancer) and <b>Umji(엄지)</b>(sub vocal & lead rapper).</p>
 			<p>The debuted with the EP "Season of Glass" with the title track being <b>Glass Bead</b> and won several rookie awards, garnering momentum early on despite being from a small company.</p>
 			<p>The group disbanded on May 22, 2021 after all six members of the group left the copmany upon the end of their contracts.</p>
+			<p>As of now, Eunha, SinB and Umji redebuted under the group of VIVIZ, Yerin and Yuju debuted as a soloist, and Sowon persued Acting for the time being.</p>
+			<p>There has been rumors and speculations by fans themselves that GFRIEND will be back this 2024.</p>
 		</div>
 	</div>
 	<script src="finals.js"></script>
